--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "description": "",
    "main": "server.js",
    "scripts": {
-      "start": "node server.js",
+      "start": "ts-node ./src/server.ts",
       "test": "jest",
       "test:watch": "jest --watch"
    },
@@ -20,6 +20,17 @@
    "homepage": "https://github.com/pkosiniak/II-proj#readme",
    "dependencies": {
       "express": "^4.16.4",
-      "jest": "^23.6.0"
+      "jest": "^23.6.0",
+      "ts-node": "^7.0.1"
+   },
+   "devDependencies": {
+      "@types/express": "^4.16.0",
+      "@types/jest": "^23.3.8",
+      "@types/node": "^10.12.0",
+      "@types/supertest": "^2.0.6",
+      "supertest": "^3.3.0",
+      "ts-jest": "^23.10.4",
+      "tslib": "^1.9.3",
+      "typescript": "^3.1.3"
    }
 }
