--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
    "dependencies": {
       "express": "^4.16.4",
       "jest": "^23.6.0",
-      "ts-node": "^7.0.1"
+      "ts-node": "^7.0.1",
+      "validator": "^10.8.0"
    },
    "devDependencies": {
       "@types/express": "^4.16.0",
       "@types/jest": "^23.3.8",
       "@types/node": "^10.12.0",
       "@types/supertest": "^2.0.6",
+      "@types/validator": "^9.4.2",
       "supertest": "^3.3.0",
       "ts-jest": "^23.10.4",
       "tslib": "^1.9.3",
