--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
    },
    "homepage": "https://github.com/pkosiniak/II-proj#readme",
    "dependencies": {
+      "connect-roles": "^3.1.2",
       "express": "^4.16.4",
       "jest": "^23.6.0",
+      "passport": "^0.4.0",
       "ts-node": "^7.0.1",
       "validator": "^10.8.0"
    },
@@ -28,6 +30,7 @@
       "@types/express": "^4.16.0",
       "@types/jest": "^23.3.8",
       "@types/node": "^10.12.0",
+      "@types/passport": "^0.4.7",
       "@types/supertest": "^2.0.6",
       "@types/validator": "^9.4.2",
       "supertest": "^3.3.0",
