added type-orm, connect-roles and more

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,12 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}\\server.js"
+				"name": "Launch Program",
+				"cwd": "${workspaceFolder}",
+				"sourceMaps": true,
+				"runtimeArgs": ["--nolazy", "-r", "ts-node/register"],
+				"args": ["${workspaceFolder}/src/server.ts"],
+				"protocol": "inspector"
         }
     ]
 }
