--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
    },
    "homepage": "https://github.com/pkosiniak/II-proj#readme",
    "dependencies": {
+      "@types/express-session": "^1.15.11",
       "connect-roles": "^3.1.2",
       "express": "^4.16.4",
+      "express-session": "^1.15.6",
       "jest": "^23.6.0",
       "passport": "^0.4.0",
+      "passport-local": "^1.0.0",
+      "pg": "^7.7.1",
+      "reflect-metadata": "^0.1.12",
       "ts-node": "^7.0.1",
+      "typeorm": "^0.2.9",
       "validator": "^10.8.0"
    },
    "devDependencies": {
@@ -31,6 +37,7 @@
       "@types/jest": "^23.3.8",
       "@types/node": "^10.12.0",
       "@types/passport": "^0.4.7",
+      "@types/passport-local": "^1.0.33",
       "@types/supertest": "^2.0.6",
       "@types/validator": "^9.4.2",
       "supertest": "^3.3.0",
