--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "express-session": "^1.15.6",
       "jest": "^23.6.0",
       "passport": "^0.4.0",
+      "passport-auth0": "^1.1.0",
       "passport-local": "^1.0.0",
       "pg": "^7.7.1",
       "reflect-metadata": "^0.1.12",
@@ -37,6 +38,7 @@
       "@types/jest": "^23.3.8",
       "@types/node": "^10.12.0",
       "@types/passport": "^0.4.7",
+      "@types/passport-auth0": "^1.0.2",
       "@types/passport-local": "^1.0.33",
       "@types/supertest": "^2.0.6",
       "@types/validator": "^9.4.2",
