bugfixes, some new features, no Auth0 for testing

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,9 @@ typings/
 # dotenv environment variables file
 .env
 
-#security files
+# security files
 *.Security.*
 
+# notes dierctory
+notes/
+*.note.*
